@@ -16,6 +16,8 @@ git-annex (8.20200815) UNRELEASED; urgency=medium
     held by another process.
   * test: Stop gpg-agent daemons that are started for the test framework's
     gpg key.
+  * Support git remotes where .git is a file, not a directory,
+    eg when --separate-git-dir was used.
 
  -- Joey Hess <id@joeyh.name>  Fri, 14 Aug 2020 14:57:45 -0400
 
